logs/Slang/generated/keywords/5.6.2--keyword_static.sv.log
name: keyword_static
description: The 'static' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_static.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_static.sv:8:8: error: expected declarator
    bit static;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_static.sv:8:15: error: expected data type (implicit type name not allowed)
    bit static;
              ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_static.sv:8:15: error: expected declarator
    bit static;
              ^
